[package]
name = "skyline-react-template"
version = "0.1.0"
authors = ["techyCoder81"]
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline-web = { version = "0.1.0", features = ["json"] }
nx-request-handler = { git = "https://github.com/techyCoder81/nx-request-handler" }
include_dir = "0.7.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

[build-dependencies]
npm_rs = "0.2.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
